Fix: Bug: fixes overlap issue on all responsive mobile sizes.

--- a/Media_Site/static/styles.css
+++ b/Media_Site/static/styles.css
@@ -477,7 +477,7 @@ body {
     }
 
     .recommended-bucket > *, .shows-bucket > *, .movies-bucket > * {
-        width: 22%;
+        /* width: 22%; */
         margin-left: 0;
     }
 
